# future_food

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: test_pipeline.py  test_pipeline_multirun.py  timer.py
future_food/: __init__.py  datablock_setup.py  glossary.py  model.py  pipeline_builder.py
future_food/model/: food.py  impact.py  land.py  metrics.py  time.py  utils.py
